[gd_scene load_steps=3 format=3 uid="uid://cdop3rqhutmny"]

[ext_resource type="Script" uid="uid://bfx0bx4s6633f" path="res://scripts/dpendulum.gd" id="1_46af8"]
[ext_resource type="Texture2D" uid="uid://vce83hruesys" path="res://images/Star.png" id="2_46af8"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_46af8")
m2 = 50
a1 = 0.1
a2 = 0.2

[node name="line1" type="Line2D" parent="."]
default_color = Color(0.937255, 0.878431, 0.658824, 1)

[node name="line2" type="Line2D" parent="."]
default_color = Color(0.937255, 0.878431, 0.658824, 1)

[node name="ball1" type="Area2D" parent="." groups=["pendulum"]]

[node name="ball1" type="Sprite2D" parent="ball1"]
texture_filter = 1
texture = ExtResource("2_46af8")

[node name="ball2" type="Area2D" parent="." groups=["pendulum"]]

[node name="ball2" type="Sprite2D" parent="ball2"]
texture_filter = 1
texture = ExtResource("2_46af8")
